changed div to nav

--- a/exercises/html-css-1/index.html
+++ b/exercises/html-css-1/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Masters</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -56,7 +59,7 @@
                 nisi quod, placeat eum rerum, tenetur ad. Assumenda!
             </p>
         </div>
-        <div class="tab">
+        <nav class="tab">
             <div class="tab-1">
                 <h3>Politics</h3>
             </div>
@@ -72,7 +75,7 @@
             <div class="tab-5">
                 <h3>Sports</h3>
             </div>
-        </div>
+        </nav>
     </div>
 </body>
 </html>
